# orca-solver

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  bench.sh
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: html_browser.rs  main.rs
crates/core/: Cargo.toml
crates/core/benches/: bitset_bench.rs
crates/core/src/: bitset.rs  dict.rs  grid.rs  lib.rs
crates/solver/: Cargo.toml
crates/solver/src/: constraint.rs  lib.rs  parallel.rs  partition.rs  propagate.rs  search.rs  state.rs  stats.rs  test_utils.rs
crates/solver/tests/: split_correctness.rs
dictionaries/: test_small.dict
docs/: algorithm.md  faq.html  index.html
grids/: bench_15x15.grid  example.grid  prefilled.grid  small_3x3.grid  unsatisfiable.grid  with_blacks.grid  with_wilds.grid
